--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </article>
             </div>
 
-            <article id="jednak-kurwa">
+            <article id="art">
                 <div id="final-message"></div>
                 <div id="timer"></div>
             </article>
